--- a/src/PasswordlessAuthentication.Application/PasswordlessAuthentication.Application.csproj
+++ b/src/PasswordlessAuthentication.Application/PasswordlessAuthentication.Application.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <Import Project="..\..\common.props" />
 
@@ -14,6 +14,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Abp" Version="8.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="7.0.4" />
     <PackageReference Include="Volo.Abp.Account.Application" Version="7.1.1" />
     <PackageReference Include="Volo.Abp.Identity.Application" Version="7.1.1" />
     <PackageReference Include="Volo.Abp.PermissionManagement.Application" Version="7.1.1" />
