--- a/src/PasswordlessAuthentication.Web/PasswordlessAuthentication.Web.csproj
+++ b/src/PasswordlessAuthentication.Web/PasswordlessAuthentication.Web.csproj
@@ -32,6 +32,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Abp" Version="8.1.0" />
+    <PackageReference Include="IdentityModel" Version="6.0.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
     <PackageReference Include="Serilog.Sinks.Async" Version="1.5.0" />
   </ItemGroup>
